# arctic-cloud

./: .gitignore  README.md  pyproject.toml  tatus
arctic-cloud-mat/data/2024-01-31-PAMIII-hourly/: isff9710.nc  isff9802.nc  isff9803.nc  isff9805.nc
arctic-cloud-mat/data/2024-01-31-tower-hourly/: README-info-13_115.txt  uncleaned_data.m
arctic-cloud-python/: vis-studio-test.py
eureka/: Twilight time filter.py  eureka-brunt-pyscript.py  multiple-files-test.py
notebooks/: 2024-01-16-initial-plots.ipynb  brunt-equation-script.ipynb  eureka-brunt-script-LyshaCal1.ipynb  eureka-brunt-script-isclear.ipynb  eureka-brunt-script.ipynb  eureka-data-import.ipynb  eureka-netCDF-script.ipynb  isnight-test.ipynb  isnight.ipynb  sheba-brunt-script.ipynb
notebooks/.ipynb_checkpoints/: 2024-01-16-initial-plots-checkpoint.ipynb
notebooks/data/2024-0-31-five-level-hourly/: README-info-13_114.txt
notebooks/data/2024-01-31-LIDAR/: README_DABUL_10sec.txt
notebooks/data/2024-01-31-PAMIII-hourly/: README-info-13_838.txt  isff9806.nc  isff9808.nc  isff9810.nc
notebooks/data/eureka-data/: README  eurmeteorologicaltwr.b1.20110515.000000.txt  eurmeteorologicaltwr.b1.20110517.000000.txt  eurmeteorologicaltwr.b1.20110826.000000.txt  eurmwrlosC1.b1.20110701.000000.cdf  eurradiationtwr.b1.20110515.000000.txt
notebooks/data/eureka-data/bsrn-rad/: eurradiationbsrn.b1.20090101.000000.txt  eurradiationbsrn.b1.20090102.000000.txt  (+504 more)
notebooks/data/test/: printed-file.xlsx  sd-spr-eq-dates.txt  test data.xlsx
sheba/arctic-cloud-python/: uncleaned-data.py
(+689 files in other folders)
