[tool.poetry]
name = "arctic-cloud"
version = "0.1.0"
description = ""
authors = ["Jason Kniss <Jason.M.Kniss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.0.12"
matplotlib = "^3.8.2"
netcdf4 = "^1.6.5"
numpy = "^1.26.3"
pandas = "^2.2.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
